# as-slice

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
